Estrtura e organização do projeto criada

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
     <meta
       name="description"
       content="Memorize qualquer coisa durante o jogo! Os flashcards são ferramentas de estudos que auxiliam na memorização e assimilação dos conteúdos. 
-      Os Flashcards da ebbi são perfeitos para estudar 
-      e relembrar verbos, regras gramaticais, vocabulário, datas históricas, citações, .."
+      Os Flashcards da ebbi são perfeitos para estudar e relembrar verbos, regras gramaticais, vocabulário, datas históricas, citações, .."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
